# morphos

./: .config.click_qemu-x86_64  .config.click_qemu-x86_64.known-working  .gitignore  .gitmodules  Kraftfile  Kraftfile_nompk  Kraftfile_nopaging  Kraftfile_vanilla  Makefile  NOTES.md  README.md  REPRODUCE.md  flake.nix  justfile  kraft.yaml  quit.sh  run-qemu-aarch64.sh  run-qemu-x86_64.sh  run.sh  setup.sh  target-port.asm  test.sh  throughput.click
benchmark/: Cargo.toml  MEASUREMENTS.md  Makefile  click-benchmark.json  minimal.click  pktgen_sample03_burst_single_flow.sh  pktgen_sample03_burst_single_flow_latency.sh  run-reconfigure.sh  run-startup.sh  run.sh  test.sh
benchmark/benches/: live_reconfigure.rs  startup.rs
benchmark/benches/latency/: main.rs  measurement.rs  persistence.rs  statistics.rs  summary.rs
benchmark/benches/latency/plots/: latency.rs  mod.rs  plot_whisker.py  whisker.rs
benchmark/benches/memory/: main.rs  measurement.rs  persistence.rs  statistics.rs  summary.rs
benchmark/benches/memory/plots/: memory.rs  mod.rs  plot_whisker.py  whisker.rs
benchmark/benches/throughput/: main.rs  measurement.rs  persistence.rs  statistics.rs  summary.rs
benchmark/benches/throughput/plots/: mod.rs  plot_whisker.py  plot_whisker_bps.py  plot_whisker_pps.py  throughput.rs  whisker.rs
benchmark/bpfilters/: drop  drop.sig  ether-mirror  ether-mirror.sig  firewall-10  firewall-10.sig  firewall-100  firewall-100.sig  firewall-1000  firewall-1000.sig  firewall-10000  firewall-10000.sig  firewall-2  firewall-2.sig  nat  nat.sig  pass  pass.sig  rate-limiter  rate-limiter.sig  round-robin  round-robin.sig  stringmatcher  stringmatcher.sig  strip-ether-vlan-header  strip-ether-vlan-header.sig  target-port  target-port.sig  udp-tcp-classifier  udp-tcp-classifier.sig
benchmark/conf/: autotest_localhost.cfg  ssh_config_doctor_cluster  uk_adelaide_christina.cfg  uk_localhost.cfg  uk_wilfred_river.cfg
benchmark/configurations/: firewall-bpf.click  firewall.click  l2-load-latency.lua  linux-rx.click  linux-tx.click  minimal.click  print-pings.click  receiver.lua  router.click  stringmatcher.click  switch-2ports.click  thomer-nat-ebpf.click  thomer-nat-og.click  thomer-nat.click  vpp.conf
benchmark/configurations/pass/: config.click  pass
benchmark/pysrc/: autotest.py  click_configs.py  conf.py  enums.py  measure.py  measure_all.py  measure_firewall.py  measure_hotel.py  measure_iperf.py  measure_latency.py  measure_mediation.py  measure_misc.py  measure_next.py  measure_reconfiguration.py  measure_throughput.py  root.py  server.py  util.py
benchmark/results/: MEASUREMENTS.md  click-benchmark.json
benchmark/scripts/: README.md  plot_whisker.py
benchmark/src/: cpio.rs  lib.rs  live_reconfigure.rs  main.rs  startup.rs  startup_base.rs  terminal.rs  vm.rs
click_platform/: linux_platform.cpp
click_platform/gpl/: spec_prototypes.cpp
ebpf/: Cargo.toml  Makefile  README.md
ebpf/dns-filter-ebpf/: Cargo.toml
ebpf/dns-filter-ebpf/src/: main.rs
ebpf/drop-ebpf/: Cargo.toml
ebpf/drop-ebpf/src/: main.rs
ebpf/ether-mirror-ebpf/: Cargo.toml
ebpf/ether-mirror-ebpf/src/: main.rs
ebpf/pass-ebpf/src/: main.rs
ebpf/rate-limiter-ebpf/: Cargo.toml
ebpf/rate-limiter-ebpf/src/: main.rs
ebpf/src/: lib.rs  programs.rs
ebpf/strip-ether-vlan-header-ebpf/src/: helper.rs  main.rs
ebpf/target-port-ebpf/: Cargo.toml
ebpf/target-port-ebpf/src/: main.rs
ebpf/udp-tcp-classifier-ebpf/: Cargo.toml
ebpf/udp-tcp-classifier-ebpf/src/: main.rs
ebpf/xtask/src/: build_ebpf.rs  main.rs
elements/: discard.click  forward.click
examples/: Makefile-base
examples/chain/: Makefile
examples/chain/app-1/: config.click
examples/chain/app-2/: config.click
examples/ether-mirror/: Makefile
examples/showcase/: Makefile
filter/: Makefile  drop.cc  filter.cc  pass.cc
filter-rs/: README.md
filter-rs/dns-filter-ebpf/: Cargo.toml
filter-rs/filter-rs-ebpf/: Cargo.toml
filter-rs/strip-ether-vlan-header-ebpf/: Cargo.toml
filter-rs/strip-ether-vlan-header-ebpf/src/: main.rs
filter-rs/udp-tcp-classifier-ebpf/: Cargo.toml
helper/: Cargo.toml
helper/src/: main.rs
libs/click/: Config.uk  Makefile  Makefile.uk  click.cc  packet.cc  packet.hh
libs/ubpf/: Config.uk  MAINTAINERS.md  Makefile.uk  README.md
nix/: click.nix  click.startup-time.patch  dpdk-new-meson.patch  dpdk20.nix  dpdk24.nix  fastclick.nix  guest-config.nix  linux-pktgen.nix  ssh_key  ssh_key.pub  unikraft.disable-assert.patch  unikraft.nix  unikraft.portIO.patch
rootfs/: config.click  config.click.bck  config.click.ether-mirror  config.click.rate-limiter  config.click.strip-ether-vlan-header  config.click.target-port  config.click.udp-tcp-classifier  dns-filter  drop  drop.sig  ether-mirror  ether-mirror.sig  pass  pass.sig  rate-limiter  rate-limiter.sig  showcase.click  strip-ether-vlan-header  strip-ether-vlan-header.sig  target-port  target-port.sig  udp-tcp-classifier  udp-tcp-classifier.sig
showcase/: Cargo.toml
showcase/src/: app.rs  click_api.rs  main.rs  vm.rs
verifier/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  main.cpp
verifier/keys/: README.md  ec_private_key.pem  ec_public_key.pem
verifier/platform/: click_platform.cpp  click_platform.hpp
verifier/platform/gpl/: spec_prototypes.cpp  spec_type_descriptors.hpp
verifier/src/: build.rs  main.rs
verifier/src/prevail/: mod.rs
(+94 files in other folders)
