[package]
name = "click-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
anyhow = "1.0"
criterion = "0.5.1"
tempfile = "3.10.1"
mac_address = "1.1.7"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
statrs = "0.16.0"
criterion-plot = "0.5.0"
itertools = "0.13.0"
libc = "0.2.155"

[[bench]]
name = "live_reconfigure"
harness = false

[[bench]]
name = "startup"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "latency"
harness = false
