[package]
name = "bpf-element"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dns-filter"
path = "src/bin/dns-filter.rs"

[[bin]]
name = "drop"
path = "src/bin/drop.rs"

[[bin]]
name = "pass"
path = "src/bin/pass.rs"

[[bin]]
name = "ether-mirror"
path = "src/bin/ether-mirror.rs"

[[bin]]
name = "rate-limiter"
path = "src/bin/rate-limiter.rs"

[[bin]]
name = "round-robin"
path = "src/bin/round-robin.rs"

[[bin]]
name = "strip-ether-vlan-header"
path = "src/bin/strip-ether-vlan-header.rs"

[[bin]]
name = "target-port"
path = "src/bin/target-port.rs"

[[bin]]
name = "udp-tcp-classifier"
path = "src/bin/udp-tcp-classifier.rs"

[[bin]]
name = "state-migration-v1"
path = "src/bin/state-migration-v1.rs"

[[bin]]
name = "state-migration-v2"
path = "src/bin/state-migration-v2.rs"

[[bin]]
name = "nat"
path = "src/bin/nat.rs"

[[bin]]
name = "firewall"
path = "src/bin/firewall.rs"

[dependencies]
network-types = "0.0.6"
aya-ebpf = "0.1.1"
flex-dns = "1.0.1"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
