[package]
name = "strip-ether-vlan-header-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
network-types = "0.0.6"
aya-ebpf = "0.1.0"

[[bin]]
name = "strip-ether-vlan-header"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
